--- a/package.json
+++ b/package.json
@@ -17,20 +17,26 @@
     "bootstrap": "^4.0.0",
     "bootswatch": "^4.0.0",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.4",
     "moment": "^2.20.1",
+    "popper.js": "^1.12.9",
     "vue": "^2.5.13",
+    "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "zepto": "^1.2.0"
   },
   "devDependencies": {
     "css-loader": "^0.28.7",
+    "dotenv": "^5.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "glob": "^7.1.2",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "http-server-spa": "^1.2.0",
+    "inline-manifest-webpack-plugin": "^3.0.1",
     "node-sass": "^4.7.2",
     "resolve-url-loader": "^2.2.1",
     "rimraf": "^2.6.2",
@@ -39,22 +45,23 @@
     "ts-loader": "^3.2.0",
     "typescript": "^2.6.2",
     "vue-loader": "^13.6.1",
+    "vue-template-compiler": "^2.5.13",
     "webpack": "^3.10.0",
     "webpack-html-plugin": "^0.1.1",
-    "webpack-manifest-plugin": "^1.3.2",
+    "webpack-manifest-plugin": "^2.0.0-rc.1",
     "webpack-merge": "^4.1.1",
     "yargs": "^10.0.3"
   },
   "scripts": {
     "clean": "rimraf dist",
-    "build": "yarn install --force & yarn run clean & yarn run wp",
-    "wp": "yarn run wp:setup & yarn run wp:app",
-    "wp:setup": "yarn run wp:vendor & yarn run wp:theme",
+    "build": "yarn install --force && yarn run clean && yarn run wp",
+    "start": "http-server-spa dist index.html 1337",
+    "wp": "yarn run wp:setup && yarn run wp:app",
+    "wp:setup": "yarn run wp:vendor && yarn run wp:theme",
     "wp:app": "webpack --config webpack.app.config.js",
     "wp:theme": "webpack --config webpack.theme.config.js",
     "wp:vendor": "webpack --config webpack.vendor.config.js",
-    "wp:app:dev": "yarn run wp:app --env.dev",
-    "wp:theme:dev": "yarn run wp:theme --env.dev",
-    "wp:app:watch": "yarn run wp:app --env.watch"
+    "wp:app:watch": "yarn run wp:app --watch",
+    "wp:theme:watch": "yarn run wp:theme --watch"
   }
 }
